--- a/Lynnettetypein/HTML/Lynnette-no-diagrams.html
+++ b/Lynnettetypein/HTML/Lynnette-no-diagrams.html
@@ -17,7 +17,11 @@
     <script type="text/javascript" src="https://cdn.ctat.cs.cmu.edu/releases/lab/ctatloader.js"></script>
 
 
-      <script>
+    <script type="text/javascript" src="Assets/modelhelperfuns.js"></script>
+    <script type="text/javascript" src="Assets/Lynnette-common.js"></script>
+    <script type="text/javascript" src="Assets/Lynnette-animations.js"></script>
+
+       <script>
     var myVars = {
       question_file: "../CognitiveModel/2xplus3eq7-no-diagrams.nools",
       tutoring_service_communication: "javascript"
@@ -28,11 +32,10 @@
     }
   </script>
   
-
-
-    <script type="text/javascript" src="Assets/modelhelperfuns.js"></script>
-    <script type="text/javascript" src="Assets/Lynnette-common.js"></script>
-    <script type="text/javascript" src="Assets/Lynnette-animations.js"></script>
+    <script>
+      window.interfaceType = "diagrams-choice"
+      window.diagramsFirst = true
+    </script>
   </head>
 
   
