--- a/h_search-js/HTML/typein-whole.html
+++ b/h_search-js/HTML/typein-whole.html
@@ -22,6 +22,19 @@
     <script src="https://cdn.ctat.cs.cmu.edu/releases/lynnette/math.js"></script>
     <script src="Assets/Lynnette-animations.js"></script>
     <script src="Assets/transaction_mailer_users.js"></script>
+
+
+    <script>
+    var myVars = {
+      question_file: "../CognitiveModel/problem8",
+      tutoring_service_communication: "javascript"
+    };
+
+    function ctatOnload() {
+      initTutor(myVars);
+    }
+  </script>
+
     
     <!-- Dashboard realm files -->
     <!-- <link rel="stylesheet" href="https://cdn.ctat.cs.cmu.edu/releases/lab/guppy/guppy-default-osk.min.css">
