--- a/h_search-js/HTML/typein-whole.html
+++ b/h_search-js/HTML/typein-whole.html
@@ -26,7 +26,7 @@
 
     <script>
     var myVars = {
-      question_file: "../CognitiveModel/problem8",
+      question_file: "../CognitiveModel/problem8.nools",
       tutoring_service_communication: "javascript"
     };
 
